; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/extr_bin.c___getname.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/extr_bin.c___getname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8* (i32*, i32, i32, i32)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i32, i32, i32)* @__getname to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @__getname(i32* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %12 = load i32*, i32** %6, align 8
  %13 = call i32* @r_bin_cur(i32* %12)
  store i32* %13, i32** %10, align 8
  %14 = load i32*, i32** %10, align 8
  %15 = call %struct.TYPE_3__* @r_bin_file_cur_plugin(i32* %14)
  store %struct.TYPE_3__* %15, %struct.TYPE_3__** %11, align 8
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %17 = icmp ne %struct.TYPE_3__* %16, null
  br i1 %17, label %18, label %32

18:                                               ; preds = %4
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i8* (i32*, i32, i32, i32)*, i8* (i32*, i32, i32, i32)** %20, align 8
  %22 = icmp ne i8* (i32*, i32, i32, i32)* %21, null
  br i1 %22, label %23, label %32

23:                                               ; preds = %18
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  %26 = load i8* (i32*, i32, i32, i32)*, i8* (i32*, i32, i32, i32)** %25, align 8
  %27 = load i32*, i32** %10, align 8
  %28 = load i32, i32* %7, align 4
  %29 = load i32, i32* %8, align 4
  %30 = load i32, i32* %9, align 4
  %31 = call i8* %26(i32* %27, i32 %28, i32 %29, i32 %30)
  store i8* %31, i8** %5, align 8
  br label %33

32:                                               ; preds = %18, %4
  store i8* null, i8** %5, align 8
  br label %33

33:                                               ; preds = %32, %23
  %34 = load i8*, i8** %5, align 8
  ret i8* %34
}

declare dso_local i32* @r_bin_cur(i32*) #1

declare dso_local %struct.TYPE_3__* @r_bin_file_cur_plugin(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
